@@ -2,7 +2,9 @@ package com.carbacount.emissions.service;
 
 import com.carbacount.audit.service.AuditService;
 import com.carbacount.common.exception.FacilityAccessDeniedException;
+import com.carbacount.common.service.FileStorageService;
 import com.carbacount.emissions.dto.*;
+import com.carbacount.emissions.dto.EditableSubmissionResponse;
 import com.carbacount.emissions.entity.*;
 import com.carbacount.emissions.repository.*;
 import com.carbacount.emissions.entity.ProductionData;
@@ -22,6 +24,8 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import org.springframework.web.multipart.MultipartFile;
+import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
@@ -30,6 +34,9 @@ import java.util.stream.Collectors;
 
 @Service
 public class DataEntryService {
+    private static final String REVIEW_PENDING = "PENDING_REVIEW";
+    private static final String REVIEW_NEEDS_CORRECTION = "NEEDS_CORRECTION";
+    private static final String REVIEW_VERIFIED = "VERIFIED";
 
     @Autowired
     private Scope1Repository scope1Repo;
@@ -57,6 +64,10 @@ public class DataEntryService {
     private AuditService auditService;
     @Autowired
     private EmissionFactorRepository emissionFactorRepo;
+    @Autowired
+    private SubmissionDocumentRepository documentRepo;
+    @Autowired
+    private com.carbacount.common.service.FileStorageService fileStorageService;
 
     // ── Private helpers ────────────────────────────────────────────────────
 
@@ -115,7 +126,10 @@ public class DataEntryService {
     }
 
     private EmissionFactor resolveEmissionFactor(RealtimeEmissionRequest req, Facility facility) {
-        String country = facility.getCountry() != null && !facility.getCountry().isBlank() ? facility.getCountry().trim() : "India";
+        String country = facility.getCountry() != null && !facility.getCountry().isBlank()
+                ? facility.getCountry().trim()
+                : "India";
+        String industry = currentOrg().getIndustryType();
         String unit = req.getUnit() == null ? null : req.getUnit().trim();
         String fuelType = req.getFuelType() == null ? null : req.getFuelType().trim();
         String electricitySource = req.getElectricitySource() == null ? null : req.getElectricitySource().trim();
@@ -131,20 +145,31 @@ public class DataEntryService {
             sourceName = subCategory != null && !subCategory.isBlank() ? subCategory : category;
         }
 
+        if (scope != null && sourceName != null && unit != null) {
+            List<EmissionFactor> industryMatches = emissionFactorRepo.findLatestFactorCandidates(
+                    scope, sourceName, unit, null, country, industry);
+            if (!industryMatches.isEmpty()) {
+                return industryMatches.get(0);
+            }
+        }
+
         Optional<EmissionFactor> result = Optional.empty();
         if (scope != null && sourceName != null) {
-            result = emissionFactorRepo.findTopByCountryAndScopeTypeAndSourceNameIgnoreCaseAndUnitIgnoreCaseOrderByFactorYearDesc(
-                    country, scope, sourceName, unit == null ? "" : unit);
+            result = emissionFactorRepo
+                    .findTopByCountryAndScopeTypeAndSourceNameIgnoreCaseAndUnitIgnoreCaseOrderByFactorYearDesc(
+                            country, scope, sourceName, unit == null ? "" : unit);
             if (result.isEmpty()) {
                 result = emissionFactorRepo.findTopByCountryAndScopeTypeAndSourceNameIgnoreCaseOrderByFactorYearDesc(
                         country, scope, sourceName);
             }
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByScopeTypeAndSourceNameIgnoreCaseAndUnitIgnoreCaseOrderByFactorYearDesc(
-                        scope, sourceName, unit == null ? "" : unit);
+                result = emissionFactorRepo
+                        .findTopByScopeTypeAndSourceNameIgnoreCaseAndUnitIgnoreCaseOrderByFactorYearDesc(
+                                scope, sourceName, unit == null ? "" : unit);
             }
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByScopeTypeAndSourceNameIgnoreCaseOrderByFactorYearDesc(scope, sourceName);
+                result = emissionFactorRepo.findTopByScopeTypeAndSourceNameIgnoreCaseOrderByFactorYearDesc(scope,
+                        sourceName);
             }
         }
 
@@ -152,7 +177,8 @@ public class DataEntryService {
             result = emissionFactorRepo.findTopByCountryAndFuelTypeAndUnitIgnoreCaseOrderByFactorYearDesc(
                     country, fuelType, unit == null ? "" : unit);
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country, fuelType);
+                result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country,
+                        fuelType);
             }
             if (result.isEmpty()) {
                 result = emissionFactorRepo.findTopByFuelTypeIgnoreCaseOrderByFactorYearDesc(fuelType);
@@ -161,16 +187,19 @@ public class DataEntryService {
             result = emissionFactorRepo.findTopByCountryAndElectricitySourceAndUnitIgnoreCaseOrderByFactorYearDesc(
                     country, electricitySource, unit == null ? "" : unit);
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByCountryAndElectricitySourceIgnoreCaseOrderByFactorYearDesc(country, electricitySource);
+                result = emissionFactorRepo.findTopByCountryAndElectricitySourceIgnoreCaseOrderByFactorYearDesc(country,
+                        electricitySource);
             }
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByElectricitySourceIgnoreCaseOrderByFactorYearDesc(electricitySource);
+                result = emissionFactorRepo
+                        .findTopByElectricitySourceIgnoreCaseOrderByFactorYearDesc(electricitySource);
             }
         } else if (result.isEmpty() && "SCOPE3".equals(scope) && category != null) {
             result = emissionFactorRepo.findTopByCountryAndFuelTypeAndUnitIgnoreCaseOrderByFactorYearDesc(
                     country, category, unit == null ? "" : unit);
             if (result.isEmpty()) {
-                result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country, category);
+                result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country,
+                        category);
             }
             if (result.isEmpty()) {
                 result = emissionFactorRepo.findTopByFuelTypeIgnoreCaseOrderByFactorYearDesc(category);
@@ -179,7 +208,8 @@ public class DataEntryService {
                 result = emissionFactorRepo.findTopByCountryAndFuelTypeAndUnitIgnoreCaseOrderByFactorYearDesc(
                         country, subCategory, unit == null ? "" : unit);
                 if (result.isEmpty()) {
-                    result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country, subCategory);
+                    result = emissionFactorRepo.findTopByCountryAndFuelTypeIgnoreCaseOrderByFactorYearDesc(country,
+                            subCategory);
                 }
                 if (result.isEmpty()) {
                     result = emissionFactorRepo.findTopByFuelTypeIgnoreCaseOrderByFactorYearDesc(subCategory);
@@ -193,7 +223,7 @@ public class DataEntryService {
     // ── SUBMIT data (DATA_ENTRY role) ──────────────────────────────────────
 
     @Transactional
-    public int submitData(DataEntrySubmitRequest req) {
+    public int submitData(DataEntrySubmitRequest req, List<MultipartFile> files) {
         User user = currentUser();
         Organization org = currentOrg();
 
@@ -226,9 +256,29 @@ public class DataEntryService {
                 .reportingYear(reportingYear)
                 .submittedBy(user)
                 .status("SUBMITTED")
+                .reviewStatus(REVIEW_PENDING)
                 .submittedAt(submittedAt)
                 .build();
         submissionRepo.save(submission);
+
+        if (files != null) {
+            for (MultipartFile file : files) {
+                try {
+                    String fileUrl = fileStorageService.storeFile(file);
+                    SubmissionDocument doc = SubmissionDocument.builder()
+                            .id(UUID.randomUUID())
+                            .submissionId(submissionId)
+                            .fileName(file.getOriginalFilename())
+                            .fileType(file.getContentType())
+                            .fileUrl(fileUrl)
+                            .uploadedBy(user)
+                            .build();
+                    documentRepo.save(doc);
+                } catch (IOException e) {
+                    throw new RuntimeException("Failed to store file: " + file.getOriginalFilename(), e);
+                }
+            }
+        }
         int count = 0;
         BigDecimal totalEmission = BigDecimal.ZERO;
 
@@ -366,7 +416,8 @@ public class DataEntryService {
     @Transactional(readOnly = true)
     public List<EmissionRecordResponse> getPendingRecords() {
         Organization org = currentOrg();
-        return buildSubmissionSummaries(submissionRepo.findByOrganizationIdAndStatus(org.getId(), "SUBMITTED"));
+        return buildSubmissionSummaries(
+                submissionRepo.findByOrganizationIdAndReviewStatus(org.getId(), REVIEW_PENDING));
     }
 
     @Transactional(readOnly = true)
@@ -378,7 +429,8 @@ public class DataEntryService {
     @Transactional(readOnly = true)
     public List<EmissionRecordResponse> getApprovedRecords() {
         Organization org = currentOrg();
-        return buildSubmissionSummaries(submissionRepo.findByOrganizationIdAndStatus(org.getId(), "VERIFIED"));
+        return buildSubmissionSummaries(
+                submissionRepo.findByOrganizationIdAndReviewStatus(org.getId(), REVIEW_VERIFIED));
     }
 
     @Transactional(readOnly = true)
@@ -401,6 +453,257 @@ public class DataEntryService {
         return buildRowsForSubmission(submission);
     }
 
+    @Transactional(readOnly = true)
+    public EditableSubmissionResponse getEditableSubmission(UUID submissionId) {
+        DataEntrySubmission submission = getSubmissionWithAccess(submissionId);
+        ensureEditableStatus(submission.getStatus(), submission.getReviewStatus(), submissionId);
+
+        EditableSubmissionResponse.EditableSubmissionResponseBuilder builder = EditableSubmissionResponse.builder()
+                .submissionId(submission.getId())
+                .facilityId(submission.getFacility().getId())
+                .reportingYearId(submission.getReportingYear().getId())
+                .scope(submission.getScopeType())
+                .status(submission.getStatus());
+
+        switch (submission.getScopeType()) {
+            case "SCOPE1":
+                builder.fuelRows(scope1Repo.findBySubmissionId(submissionId).stream()
+                        .map(r -> FuelRowRequest.builder()
+                                .fuelType(r.getFuelType())
+                                .unit(r.getUnit())
+                                .quantity(r.getQuantity())
+                                .build())
+                        .collect(java.util.stream.Collectors.toList()));
+                break;
+            case "SCOPE2":
+                builder.electricityRows(scope2Repo.findBySubmissionId(submissionId).stream()
+                        .map(r -> ElectricityRowRequest.builder()
+                                .electricitySource(r.getElectricitySource())
+                                .unit(r.getUnit())
+                                .quantity(r.getQuantity())
+                                .build())
+                        .collect(java.util.stream.Collectors.toList()));
+                break;
+            case "SCOPE3":
+                builder.scope3Rows(scope3Repo.findBySubmissionId(submissionId).stream()
+                        .map(r -> Scope3RowRequest.builder()
+                                .category(r.getCategory())
+                                .subCategory(r.getSubCategory())
+                                .unit(r.getUnit())
+                                .quantity(r.getQuantity())
+                                .build())
+                        .collect(java.util.stream.Collectors.toList()));
+                break;
+            case "PRODUCTION": {
+                ProductionData row = productionRepo.findBySubmissionId(submissionId).stream().findFirst()
+                        .orElseThrow(() -> new RuntimeException("Production row not found for submission"));
+                builder.productionData(ProductionDataRequest.builder()
+                        .totalProduction(row.getTotalProduction())
+                        .unit(row.getUnit())
+                        .build());
+                break;
+            }
+            default:
+                throw new RuntimeException("Unsupported scope type: " + submission.getScopeType());
+        }
+
+        return builder.build();
+    }
+
+    @Transactional
+    public int updateSubmission(UUID submissionId, DataEntrySubmitRequest req) {
+        User user = currentUser();
+        Organization org = currentOrg();
+        DataEntrySubmission submission = getSubmissionWithAccess(submissionId);
+        ensureEditableStatus(submission.getStatus(), submission.getReviewStatus(), submissionId);
+
+        String scope = req.getScope() == null ? null : req.getScope().trim().toUpperCase();
+        if (scope == null || scope.isBlank()) {
+            scope = submission.getScopeType();
+        }
+
+        Facility facility = facilityRepo.findById(req.getFacilityId())
+                .orElseThrow(() -> new RuntimeException("Facility not found"));
+        facilityService.assertCanAccessFacility(req.getFacilityId());
+        if (!facility.getOrganization().getId().equals(org.getId())) {
+            throw new FacilityAccessDeniedException(req.getFacilityId().toString(),
+                    "Facility does not belong to your organization");
+        }
+
+        ReportingYear reportingYear = reportingYearRepo.findById(req.getReportingYearId())
+                .orElseThrow(() -> new RuntimeException("Reporting year not found"));
+
+        // Clear existing rows for this submission (supports scope changes).
+        scope1Repo.deleteBySubmissionId(submissionId);
+        scope2Repo.deleteBySubmissionId(submissionId);
+        scope3Repo.deleteBySubmissionId(submissionId);
+        productionRepo.deleteBySubmissionId(submissionId);
+
+        LocalDateTime submittedAt = LocalDateTime.now();
+        int count = 0;
+        BigDecimal totalEmission = BigDecimal.ZERO;
+
+        if ("SCOPE1".equals(scope) && req.getFuelRows() != null) {
+            for (FuelRowRequest row : req.getFuelRows()) {
+                RealtimeEmissionResponse calc = calculateEmission(RealtimeEmissionRequest.builder()
+                        .facilityId(req.getFacilityId())
+                        .scope("SCOPE1")
+                        .fuelType(row.getFuelType())
+                        .unit(row.getUnit())
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .build());
+                scope1Repo.save(Scope1.builder()
+                        .facility(facility)
+                        .reportingYear(reportingYear)
+                        .submissionId(submissionId)
+                        .fuelType(row.getFuelType())
+                        .unit(row.getUnit())
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .emissionFactor(calc.getEmissionFactor())
+                        .calculatedEmission(calc.getCalculatedEmission())
+                        .status("SUBMITTED")
+                        .submittedAt(submittedAt)
+                        .createdBy(user)
+                        .updatedBy(user)
+                        .build());
+                totalEmission = totalEmission.add(calc.getCalculatedEmission());
+                count++;
+            }
+        } else if ("SCOPE2".equals(scope) && req.getElectricityRows() != null) {
+            for (ElectricityRowRequest row : req.getElectricityRows()) {
+                RealtimeEmissionResponse calc = calculateEmission(RealtimeEmissionRequest.builder()
+                        .facilityId(req.getFacilityId())
+                        .scope("SCOPE2")
+                        .electricitySource(row.getElectricitySource())
+                        .unit(row.getUnit())
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .build());
+                scope2Repo.save(Scope2.builder()
+                        .facility(facility)
+                        .reportingYear(reportingYear)
+                        .submissionId(submissionId)
+                        .electricitySource(row.getElectricitySource())
+                        .unit(row.getUnit() != null ? row.getUnit() : "kWh")
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .emissionFactor(calc.getEmissionFactor())
+                        .calculatedEmission(calc.getCalculatedEmission())
+                        .status("SUBMITTED")
+                        .submittedAt(submittedAt)
+                        .createdBy(user)
+                        .updatedBy(user)
+                        .build());
+                totalEmission = totalEmission.add(calc.getCalculatedEmission());
+                count++;
+            }
+        } else if ("SCOPE3".equals(scope) && req.getScope3Rows() != null) {
+            for (Scope3RowRequest row : req.getScope3Rows()) {
+                RealtimeEmissionResponse calc = calculateEmission(RealtimeEmissionRequest.builder()
+                        .facilityId(req.getFacilityId())
+                        .scope("SCOPE3")
+                        .category(row.getCategory())
+                        .subCategory(row.getSubCategory())
+                        .unit(row.getUnit())
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .build());
+                scope3Repo.save(Scope3Activity.builder()
+                        .facility(facility)
+                        .reportingYear(reportingYear)
+                        .submissionId(submissionId)
+                        .category(row.getCategory())
+                        .subCategory(row.getSubCategory())
+                        .unit(row.getUnit())
+                        .quantity(row.getQuantity() == null ? BigDecimal.ZERO : row.getQuantity())
+                        .emissionFactor(calc.getEmissionFactor())
+                        .calculatedEmission(calc.getCalculatedEmission())
+                        .status("SUBMITTED")
+                        .submittedAt(submittedAt)
+                        .createdBy(user)
+                        .build());
+                totalEmission = totalEmission.add(calc.getCalculatedEmission());
+                count++;
+            }
+        } else if ("PRODUCTION".equals(scope) && req.getProductionData() != null) {
+            ProductionDataRequest pd = req.getProductionData();
+            if (pd.getTotalProduction() == null || pd.getTotalProduction().doubleValue() <= 0) {
+                throw new IllegalArgumentException("Total production must be a positive number");
+            }
+            productionRepo.save(ProductionData.builder()
+                    .facility(facility)
+                    .reportingYear(reportingYear)
+                    .submissionId(submissionId)
+                    .totalProduction(pd.getTotalProduction())
+                    .unit(pd.getUnit() != null ? pd.getUnit() : "ton")
+                    .status("SUBMITTED")
+                    .submittedAt(submittedAt)
+                    .createdBy(user)
+                    .build());
+            count++;
+        } else {
+            throw new IllegalArgumentException("Invalid scope or payload for update");
+        }
+
+        submission.setFacility(facility);
+        submission.setReportingYear(reportingYear);
+        submission.setScopeType(scope);
+        submission.setStatus("SUBMITTED");
+        submission.setReviewStatus(REVIEW_PENDING);
+        submission.setSubmittedAt(submittedAt);
+        submission.setVerifiedAt(null);
+        submission.setVerifiedBy(null);
+        submission.setRejectionReason(null);
+        submission.setTotalEmission(totalEmission);
+        submissionRepo.save(submission);
+
+        auditService.log(org, user,
+                "EDIT_SUBMISSION [" + scope + "]: " + submissionId + " (" + count + " rows)",
+                "DATA_ENTRY");
+        return count;
+    }
+
+    @Transactional
+    public void deleteSubmission(UUID submissionId) {
+        User user = currentUser();
+        Organization org = currentOrg();
+        DataEntrySubmission submission = getSubmissionWithAccess(submissionId);
+        ensureEditableStatus(submission.getStatus(), submission.getReviewStatus(), submissionId);
+
+        scope1Repo.deleteBySubmissionId(submissionId);
+        scope2Repo.deleteBySubmissionId(submissionId);
+        scope3Repo.deleteBySubmissionId(submissionId);
+        productionRepo.deleteBySubmissionId(submissionId);
+        submissionRepo.delete(submission);
+
+        auditService.log(org, user,
+                "DELETE_SUBMISSION [" + submission.getScopeType() + "]: " + submissionId,
+                "DATA_ENTRY");
+    }
+
+    private DataEntrySubmission getSubmissionWithAccess(UUID submissionId) {
+        User user = currentUser();
+        Organization org = currentOrg();
+        DataEntrySubmission submission = submissionRepo.findByIdAndOrganizationId(submissionId, org.getId())
+                .orElseThrow(() -> new RuntimeException("Submission not found"));
+
+        if (isDataEntryUser()) {
+            List<UUID> assignedFacilityIds = facilityService.getAssignedFacilityIds(user.getId());
+            if (!assignedFacilityIds.contains(submission.getFacility().getId())
+                    || !submission.getSubmittedBy().getId().equals(user.getId())) {
+                throw new FacilityAccessDeniedException(submission.getFacility().getId().toString(),
+                        "Submission does not belong to your assigned facilities");
+            }
+        }
+        return submission;
+    }
+
+    private void ensureEditableStatus(String status, String reviewStatus, UUID submissionId) {
+        boolean editableByStatus = "DRAFT".equalsIgnoreCase(status);
+        boolean editableByReviewStatus = REVIEW_NEEDS_CORRECTION.equalsIgnoreCase(reviewStatus);
+        if (!editableByStatus && !editableByReviewStatus) {
+            throw new FacilityAccessDeniedException(submissionId.toString(),
+                    "Submission is locked. Only DRAFT or NEEDS_CORRECTION submissions can be edited/deleted");
+        }
+    }
+
     private List<EmissionRecordResponse> buildSubmissionSummaries(List<DataEntrySubmission> submissions) {
         return submissions.stream()
                 .sorted(Comparator.comparing(
@@ -411,22 +714,47 @@ public class DataEntryService {
     }
 
     private List<EmissionRecordResponse> buildRowsForSubmission(DataEntrySubmission submission) {
-        List<EmissionRecordResponse> details = switch (submission.getScopeType()) {
-            case "SCOPE1" -> scope1Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse).toList();
-            case "SCOPE2" -> scope2Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse).toList();
-            case "SCOPE3" ->
-                scope3Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse).toList();
-            case "PRODUCTION" ->
-                productionRepo.findBySubmissionId(submission.getId()).stream().map(this::toResponse).toList();
-            default -> throw new RuntimeException("Unsupported scope type: " + submission.getScopeType());
-        };
+        List<EmissionRecordResponse> details;
+        switch (submission.getScopeType()) {
+            case "SCOPE1":
+                details = scope1Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse)
+                        .collect(java.util.stream.Collectors.toList());
+                break;
+            case "SCOPE2":
+                details = scope2Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse)
+                        .collect(java.util.stream.Collectors.toList());
+                break;
+            case "SCOPE3":
+                details = scope3Repo.findBySubmissionId(submission.getId()).stream().map(this::toResponse)
+                        .collect(java.util.stream.Collectors.toList());
+                break;
+            case "PRODUCTION":
+                details = productionRepo.findBySubmissionId(submission.getId()).stream().map(this::toResponse)
+                        .collect(java.util.stream.Collectors.toList());
+                break;
+            default:
+                throw new RuntimeException("Unsupported scope type: " + submission.getScopeType());
+        }
+
+        List<SubmissionDocumentResponse> documents = documentRepo.findBySubmissionId(submission.getId()).stream()
+                .map(this::toDocumentResponse)
+                .collect(java.util.stream.Collectors.toList());
+
         return details.stream()
+                .map(r -> {
+                    r.setDocuments(documents);
+                    return r;
+                })
                 .sorted(Comparator.comparing(EmissionRecordResponse::getCreatedAt,
                         Comparator.nullsLast(Comparator.reverseOrder())))
                 .collect(Collectors.toList());
     }
 
     private EmissionRecordResponse toSubmissionSummary(DataEntrySubmission submission) {
+        List<SubmissionDocumentResponse> documents = documentRepo.findBySubmissionId(submission.getId()).stream()
+                .map(this::toDocumentResponse)
+                .collect(java.util.stream.Collectors.toList());
+
         return EmissionRecordResponse.builder()
                 .id(submission.getId())
                 .submissionId(submission.getId())
@@ -436,12 +764,14 @@ public class DataEntryService {
                 .facilityName(submission.getFacility().getName())
                 .reportingYear(submission.getReportingYear().getYearLabel())
                 .status(submission.getStatus())
+                .reviewStatus(submission.getReviewStatus())
                 .rejectionReason(submission.getRejectionReason())
                 .totalEmission(submission.getTotalEmission())
                 .submittedBy(submission.getSubmittedBy().getFullName())
                 .submittedAt(submission.getSubmittedAt())
                 .createdAt(submission.getCreatedAt())
                 .verifiedAt(submission.getVerifiedAt())
+                .documents(documents)
                 .build();
     }
 
@@ -467,6 +797,10 @@ public class DataEntryService {
                 .submittedAt(f.getSubmittedAt())
                 .createdAt(f.getCreatedAt())
                 .verifiedAt(f.getVerifiedAt())
+                .documents(f.getSubmissionId() != null
+                        ? documentRepo.findBySubmissionId(f.getSubmissionId()).stream()
+                                .map(this::toDocumentResponse).collect(java.util.stream.Collectors.toList())
+                        : null)
                 .build();
     }
 
@@ -490,6 +824,10 @@ public class DataEntryService {
                 .submittedAt(e.getSubmittedAt())
                 .createdAt(e.getCreatedAt())
                 .verifiedAt(e.getVerifiedAt())
+                .documents(e.getSubmissionId() != null
+                        ? documentRepo.findBySubmissionId(e.getSubmissionId()).stream()
+                                .map(this::toDocumentResponse).collect(java.util.stream.Collectors.toList())
+                        : null)
                 .build();
     }
 
@@ -514,6 +852,10 @@ public class DataEntryService {
                 .submittedAt(s.getSubmittedAt())
                 .createdAt(s.getCreatedAt())
                 .verifiedAt(s.getVerifiedAt())
+                .documents(s.getSubmissionId() != null
+                        ? documentRepo.findBySubmissionId(s.getSubmissionId()).stream()
+                                .map(this::toDocumentResponse).collect(java.util.stream.Collectors.toList())
+                        : null)
                 .build();
     }
 
@@ -535,6 +877,22 @@ public class DataEntryService {
                 .submittedAt(p.getSubmittedAt())
                 .createdAt(p.getCreatedAt())
                 .verifiedAt(p.getVerifiedAt())
+                .documents(p.getSubmissionId() != null
+                        ? documentRepo.findBySubmissionId(p.getSubmissionId()).stream()
+                                .map(this::toDocumentResponse).collect(java.util.stream.Collectors.toList())
+                        : null)
+                .build();
+    }
+
+    private SubmissionDocumentResponse toDocumentResponse(SubmissionDocument doc) {
+        return SubmissionDocumentResponse.builder()
+                .id(doc.getId())
+                .submissionId(doc.getSubmissionId())
+                .fileName(doc.getFileName())
+                .fileType(doc.getFileType())
+                .fileUrl(doc.getFileUrl())
+                .uploadedBy(doc.getUploadedBy().getFullName())
+                .uploadedAt(doc.getUploadedAt())
                 .build();
     }
 
@@ -542,6 +900,12 @@ public class DataEntryService {
 
     @Transactional
     public void verifyRecord(UUID recordId, String type, String action, String reason) {
+        boolean isAuditor = currentPrincipal().getAuthorities().stream()
+                .anyMatch(a -> "ROLE_AUDITOR".equals(a.getAuthority()));
+        if (!isAuditor) {
+            throw new RuntimeException("Only AUDITOR can verify or reject records");
+        }
+
         User verifier = currentUser();
         Organization org = currentOrg();
         // Map legacy action words to new status
@@ -594,6 +958,102 @@ public class DataEntryService {
 
         auditService.log(org, verifier,
                 newStatus + "_RECORD: " + recordId + " (type=" + type + ")"
+                        + (reason != null ? " reason=" + reason : ""),
+                "VERIFICATION");
+    }
+
+    @Transactional
+    public void verifySubmission(UUID submissionId, String action, String reason) {
+        boolean isAuditor = currentPrincipal().getAuthorities().stream()
+                .anyMatch(a -> "ROLE_AUDITOR".equals(a.getAuthority()) || "ROLE_ADMIN".equals(a.getAuthority())
+                        || "ROLE_OWNER".equals(a.getAuthority()));
+        if (!isAuditor) {
+            throw new RuntimeException("Only AUDITOR can verify or reject submissions");
+        }
+
+        User verifier = currentUser();
+        Organization org = currentOrg();
+        DataEntrySubmission submission = submissionRepo.findByIdAndOrganizationId(submissionId, org.getId())
+                .orElseThrow(() -> new RuntimeException("Submission not found"));
+
+        // Status mapping: VERIFIED, REJECTED, NEEDS_CORRECTION, UNDER_REVIEW,
+        // PENDING_REVIEW
+        String reviewStatus;
+        String rowStatus;
+
+        switch (action.toUpperCase()) {
+            case "APPROVE":
+            case "VERIFIED":
+                reviewStatus = "VERIFIED";
+                rowStatus = "VERIFIED";
+                break;
+            case "REJECT":
+            case "REJECTED":
+                reviewStatus = "REJECTED";
+                rowStatus = "REJECTED";
+                break;
+            case "NEEDS_CORRECTION":
+                reviewStatus = "NEEDS_CORRECTION";
+                rowStatus = "NEEDS_CORRECTION";
+                break;
+            case "UNDER_REVIEW":
+                reviewStatus = "UNDER_REVIEW";
+                rowStatus = "SUBMITTED"; // Rows remain submitted
+                break;
+            default:
+                reviewStatus = "PENDING_REVIEW";
+                rowStatus = "SUBMITTED";
+                break;
+        }
+
+        submission.setReviewStatus(reviewStatus);
+        submission.setVerifiedBy(verifier);
+        submission.setVerifiedAt(LocalDateTime.now());
+        submission.setRejectionReason(reason);
+        submissionRepo.save(submission);
+
+        // Update all rows in this submission
+        switch (submission.getScopeType()) {
+            case "SCOPE1":
+                scope1Repo.findBySubmissionId(submissionId).forEach(r -> {
+                    r.setStatus(rowStatus);
+                    r.setVerifiedBy(verifier);
+                    r.setVerifiedAt(LocalDateTime.now());
+                    r.setRejectionReason(reason);
+                    scope1Repo.save(r);
+                });
+                break;
+            case "SCOPE2":
+                scope2Repo.findBySubmissionId(submissionId).forEach(r -> {
+                    r.setStatus(rowStatus);
+                    r.setVerifiedBy(verifier);
+                    r.setVerifiedAt(LocalDateTime.now());
+                    r.setRejectionReason(reason);
+                    scope2Repo.save(r);
+                });
+                break;
+            case "SCOPE3":
+                scope3Repo.findBySubmissionId(submissionId).forEach(r -> {
+                    r.setStatus(rowStatus);
+                    r.setVerifiedBy(verifier);
+                    r.setVerifiedAt(LocalDateTime.now());
+                    r.setRejectionReason(reason);
+                    scope3Repo.save(r);
+                });
+                break;
+            case "PRODUCTION":
+                productionRepo.findBySubmissionId(submissionId).forEach(r -> {
+                    r.setStatus(rowStatus);
+                    r.setVerifiedBy(verifier);
+                    r.setVerifiedAt(LocalDateTime.now());
+                    r.setRejectionReason(reason);
+                    productionRepo.save(r);
+                });
+                break;
+        }
+
+        auditService.log(org, verifier,
+                "VERIFIED_SUBMISSION: " + submissionId + " status=" + reviewStatus
                         + (reason != null ? " reason=" + reason : ""),
                 "VERIFICATION");
     }
